--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -18,7 +18,7 @@ jobs:
       GITHUB_PACKAGES_OUTPUT: ${{ github.workspace }}/github_packages
 
       # Project Setup
-      PROJECT_NAME: 'Cogworks.AzureSearch'
+      PROJECT_NAME: 'Cogworks.AzureSearch.Umbraco'
 
     steps:
       - name: Checkout master
