--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
 name: Build
 
 on:
+  pull_request:
+    branches: [ main, master, develop ]
   workflow_run:
     workflows: [ "Changelog generator" ]
     types:
@@ -10,11 +12,8 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: windows-latest
+    runs-on: ubuntu-20.04
     env:
-      # Dotnet Setup
-      DOTNET_VERSION: 3.1.401
-
       # Stop wasting time caching packages
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 
@@ -23,13 +22,13 @@ jobs:
 
       # Solution Setup
       CONFIG: 'Release'
-      PROJECT_NAME: 'Cogworks.AzureSearch.Umbraco'
+      PROJECT_NAME: ${{ github.event.repository.name }}
       VERSION: '1.0.0'
-      SOURCE_PATH: './src'
 
-      # Nuget Setup
+      # Release Setup
       NUGET_VERSION: 'latest'
-      NUGET_OUTPUT: '.output/'
+      NUGET_OUTPUT: '.nuget_output'
+      BINARIES_OUTPUT: '.binaries_output'
 
     steps:
       - name: Checkout reference commit
@@ -50,72 +49,64 @@ jobs:
           tag_check=$(git describe --exact-match `git rev-parse HEAD` | head -1)
           echo "VERSION=$tag_check" >> $GITHUB_ENV
 
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16.13.0'
 
-      - name: Setup .NET Core
+      - name: Setup .NET 5.0.x
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
+          dotnet-version: '5.0.x'
+
+      - name: Setup .NET 6.0.x
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.0.x'
 
       - name: Configure NuGet
         uses: nuget/setup-nuget@v1
         with:
           nuget-version: ${{ env.NUGET_VERSION }}
 
-      - name: NuGet Restore
-        shell: powershell
-        working-directory: ${{ github.workspace }}
-        run: |
-          $solutions = Get-ChildItem -Path . -Recurse -Include *.sln
-
-          foreach ($solutionFile in $solutions){
-            nuget restore "$solutionFile"
-          }
-
-      - name: Install Dependencies
-        shell: powershell
-        working-directory: ${{ github.workspace }}
-        run: |
-          $solutions = Get-ChildItem -Path . -Recurse -Include *.sln
-
-          foreach ($solutionFile in $solutions){
-            dotnet restore "$solutionFile"
-          }
+      - name: Restore Dependencies
+        run: dotnet restore
 
       - name: Build
-        shell: powershell
-        working-directory: ${{ github.workspace }}
         run: |
-          $solutions = Get-ChildItem -Path . -Recurse -Include *.sln
+          dotnet build \
+            -c ${{ env.CONFIG }} \
+            --no-restore
 
-          foreach ($solutionFile in $solutions){
-            msbuild.exe "$solutionFile" `
-            /p:Configuration=${{ env.CONFIG }} `
-            /p:DeployOnBuild=false `
-            /p:SkipInvalidConfigurations=true `
-            /p:TransformWebConfigEnabled=False `
-            /p:AutoParameterizationWebConfigConnectionStrings=False `
-            /p:MarkWebConfigAssistFilesAsExclude=False
-          }
-
-      - name: Pack all nuspec files
+      - name: Publish
         if: ${{ github.event_name != 'pull_request' }}
-        shell: powershell
-        working-directory: ${{ github.workspace }}
         run: |
-          $nuspecFiles = Get-ChildItem -Path ${{ env.SOURCE_PATH}} -Recurse -Include *.nuspec
+          dotnet publish \
+            -o ${{ env.BINARIES_OUTPUT }} \
+            -c ${{ env.CONFIG }} \
+            -f net5.0 \
+            --no-restore
 
-          foreach ($nuspecFile in $nuspecFiles){
-            nuget pack "$nuspecFile" `
-             -Version ${{ env.VERSION }} `
-             -Properties "Configuration=${{ env.CONFIG }};CopyrightYear=$(Get-Date -Format yyyy)"`
-             -OutputDirectory ${{ env.NUGET_OUTPUT }}
-          }
+      - name: Create NuGet package file
+        if: ${{ github.event_name != 'pull_request' }}
+        run: |
+          dotnet pack \
+            -c Release \
+            --include-symbols \
+            --no-restore \
+            -o ${{ env.NUGET_OUTPUT }} \
+            /p:Version=${{ env.VERSION }} \
+            /p:AssemblyVersion=${{ env.VERSION }}
 
-      - name: Upload build artifact
+      - name: Upload NuGet artifact
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: nuget_${{ env.PROJECT_NAME }}.${{ env.VERSION }}
+          path: ${{ github.workspace }}/${{ env.NUGET_OUTPUT }}/**/*
+
+      - name: Upload Build artifact
         if: ${{ github.event_name != 'pull_request' }}
         uses: actions/upload-artifact@v2
         with:
           name: build_${{ env.PROJECT_NAME }}.${{ env.VERSION }}
-          path: ${{ github.workspace }}/${{ env.NUGET_OUTPUT }}
+          path: ${{ github.workspace }}/${{ env.BINARIES_OUTPUT }}/**/*
