--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.1.0",
   "description": "An Umbraco DI extension to Cogworks.AzureSearch.",
   "scripts": {
-    "release": "npm version from-git && sleep 5 && conventional-changelog -p angular -i CHANGELOG.md -s -r 0 -n ./changelog.config.js && git add CHANGELOG.md && git commit -m \"docs(changelog): regenerate CHANGELOG.md [skip ci]\" "
+    "bump-version": "npm version from-git",
+    "generate-changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 -n ./changelog.config.js",
+    "github-release": "conventional-github-releaser -p angular"
   },
   "husky": {
     "hooks": {
