--- a/src/Cogworks.AzureSearch.IoC.Umbraco/Cogworks.AzureSearch.IoC.Umbraco.csproj
+++ b/src/Cogworks.AzureSearch.IoC.Umbraco/Cogworks.AzureSearch.IoC.Umbraco.csproj
@@ -4,12 +4,10 @@
         <PackageId>Cogworks.AzureSearch.IoC.Umbraco</PackageId>
         <Title>Cogworks.AzureSearch.IoC.Umbraco</Title>
         <Description>An Umbraco extension to Cogworks.AzureSearch.</Description>
-        <Product>Feature Management dashboard for Umbraco 9</Product>
+        <Product>An Umbraco 9 extension to Cogworks.AzureSearch</Product>
         <PackageTags>Azure Search Umbraco container IoC</PackageTags>
         <Version></Version>
-        <Authors>Adrian Ochmann, Marcin Zajkowski</Authors>
-        <Owners>adrian.ochmann, mzajkowski</Owners>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
