--- a/src/Cogworks.AzureSearch.IoC.Umbraco/Cogworks.AzureSearch.IoC.Umbraco.csproj
+++ b/src/Cogworks.AzureSearch.IoC.Umbraco/Cogworks.AzureSearch.IoC.Umbraco.csproj
@@ -18,6 +18,6 @@
     <ItemGroup>
       <PackageReference Include="Azure.Search.Documents" Version="11.2.0" />
       <PackageReference Include="Cogworks.AzureSearch" Version="1.0.2" />
-      <PackageReference Include="Umbraco.Cms.Core" Version="9.3.1" />
+      <PackageReference Include="Umbraco.Cms.Core" Version="[9.0.0,)" />
     </ItemGroup>
 </Project>
