--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,22 +5,6 @@ on:
 env:
   ReportOutput: '${{github.workspace}}'
   TestReportFileName: 'TestReport.${{github.run_number}}.md'
-  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-
-  # Dotnet Setup
-  DOTNET_VERSION: 3.1.401
-
-  # Stop wasting time caching packages
-  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-
-  # Disable sending usage data to Microsoft
-  DOTNET_CLI_TELEMETRY_OPTOUT: true
-
-  # Solution Setup
-  CONFIG: 'Release'
-
-  # Nuget Setup
-  NUGET_VERSION: 'latest'
 
 jobs:
   build-and-test:
@@ -33,7 +17,7 @@ jobs:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
 
       # Solution Setup
-      CONFIG: 'Release'
+      CONFIG: 'Debug'
       PROJECT_NAME: ${{ github.event.repository.name }}
       VERSION: '1.0.0'
 
@@ -96,7 +80,7 @@ jobs:
 
       - name: Set Test Title
         run: |
-          echo "::set-env name=title::Test Run for PR #${{ steps.PRNUMBER.outputs.pr }} (${{ github.run_number }})"
+          echo "Title=Test Run for PR #${{ steps.PRNUMBER.outputs.pr }} (${{ github.run_number }})" >> $GITHUB_ENV
 
       - name: Run Tests
         run: dotnet test --no-restore --no-build --configuration ${{ env.CONFIG }} --logger:"liquid.md;LogFileName=${{ env.ReportOutput}}\${{ env.TestReportFileName }};Title=${{ env.Title }};"
