ci: fixed test report output path

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -89,7 +89,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: results
-          path: ${{ env.ReportOutput}}\${{ env.TestReportFileName }}
+          path: ${{ env.ReportOutput}}/${{ env.TestReportFileName }}
 
   commenting:
     needs: build-and-test
