--- a/src/Cogworks.AzureSearch.IoC.Umbraco/Cogworks.AzureSearch.IoC.Umbraco.csproj
+++ b/src/Cogworks.AzureSearch.IoC.Umbraco/Cogworks.AzureSearch.IoC.Umbraco.csproj
@@ -4,7 +4,7 @@
         <PackageId>Cogworks.AzureSearch.IoC.Umbraco</PackageId>
         <Title>Cogworks.AzureSearch.IoC.Umbraco</Title>
         <Description>An Umbraco extension to Cogworks.AzureSearch.</Description>
-        <Product>An Umbraco 9 extension to Cogworks.AzureSearch</Product>
+        <Product>An Umbraco 9, 10, 11 extension to Cogworks.AzureSearch</Product>
         <PackageTags>Azure Search Umbraco container IoC</PackageTags>
         <Version></Version>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -15,9 +15,20 @@
         <None Include="..\..\README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
+    <ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
+        <PackageReference Include="Umbraco.Cms.Core" Version="[11.0.0,)" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+        <PackageReference Include="Umbraco.Cms.Core" Version="[10.0.0, 11.0.0)" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+      <PackageReference Include="Umbraco.Cms.Core" Version="[9.0.0, 10.0.0)" />
+    </ItemGroup>
+
     <ItemGroup>
       <PackageReference Include="Azure.Search.Documents" Version="11.2.0" />
       <PackageReference Include="Cogworks.AzureSearch" Version="1.0.2" />
-      <PackageReference Include="Umbraco.Cms.Core" Version="[9.0.0,)" />
     </ItemGroup>
 </Project>
