--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -49,15 +49,13 @@ jobs:
         with:
           node-version: '16.13.0'
 
-      - name: Setup .NET 5.0.x
-        uses: actions/setup-dotnet@v1
+      - name: Setup .NET 5/6/7
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '5.0.x'
-
-      - name: Setup .NET 6.0.x
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '6.0.x'
+          dotnet-version: |
+            5.0.x
+            6.0.x
+            7.0.x
 
       - name: Configure NuGet
         uses: nuget/setup-nuget@v1
