--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   changelog_generator:
     name: Changelog Generator
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       branch: master
       CONVENTIONAL_GITHUB_RELEASER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
